[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "ipensive"
dynamic = ["version"]
authors = [{name = "Aaron Wech", email = "awech@usgs.gov"}]
description = "Infrasound array processing for volcano monitoring."
readme = "README.md"
license = { text = "CC0-1.0" }
requires-python = ">=3.10"
dependencies = [
    "obspy",
    "pandas",
    "jinja2",
    "pyyaml",
    "numba"
]
classifiers = [
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 4 - Beta",
    "Topic :: Scientific/Engineering",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: CC0 1.0 Universal (CC0 1.0)",
]
keywords = ["infrasound", "volcano", "array processing", "monitoring"]

[project.scripts]
ipensive-backfill = "ipensive.scripts.back_populate:main"
ipensive-run = "ipensive.scripts.run_processing:main"
ipensive-metadata = "ipensive.scripts.update_metadata:main"

[tool.setuptools.dynamic]
version = {attr = "ipensive.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]

[tool.coverage.run]
omit = [
    "src/lts_array/*",
    "tests/*"
]