[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ipensive"
dynamic = ["version"]
authors = [{name = "Aaron Wech", email = "awech@usgs.gov"}]
description = "Infrasound array processing for volcano monitoring."
readme = "README.md"
license = { text = "CC0-1.0" }
requires-python = ">=3.10"
dependencies = [
    "obspy",
    "pandas",
    "jinja2",
    "pyyaml",
    "numba",
]
classifiers = [
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 4 - Beta",
    "Topic :: Scientific/Engineering",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = ["infrasound", "volcano", "array processing", "monitoring"]

[project.optional-dependencies]
test = ["pytest", "coverage"]

[project.scripts]
ipensive-backfill = "ipensive.scripts.back_populate:main"
ipensive-run = "ipensive.scripts.run_processing:main"
ipensive-metadata = "ipensive.scripts.update_metadata:main"

[project.urls]

[tool.hatch.version]
path = "src/ipensive/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/ipensive", "src/lts_array"]

[tool.coverage.run]
omit = [
    "src/lts_array/*",
    "tests/*"
]
